--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       class="fixed inset-0 backdrop-blur-sm flex flex-col items-center justify-center z-50 transition-opacity duration-300"
     >
       <!-- Insert Logo -->
-      <img src="logo.svg" alt="GNT" class="w-80 h-25 mb-4" />
+      <img src="./logo.svg" alt="GNT" class="w-80 h-25 mb-4" />
       <div class="flex space-x-2">
         <div class="h-4 w-4 bg-[#5865f2] rounded-full animate-pulse"></div>
         <div class="h-4 w-4 bg-[#5865f2] rounded-full animate-pulse"></div>
