Initial commit of GNT e-commerce frontend

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="GNT – Next-Gen Console & PC Marketplace" />
   <meta property="og:description" content="Explore the future of gaming tech with GNT – Your go-to marketplace for premium consoles and computers." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="/logo.svg" />
+  <meta property="og:image" content="./preview.png" />
   <meta property="og:url" content="https://gnt-store.vercel.app" />
   
   <!-- Stylesheets -->
