--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
   <!-- Open Graph (for social sharing) -->
   <meta property="og:title" content="GNT – Next-Gen Console & PC Marketplace" />
-  <meta property="og:description" content="Explore the future of gaming tech with GNT – Your go-to marketplace for premium consoles and computers." />
+  <meta property="og:description" content="Explore the future of gaming tech with GNT – Your go-to marketplace for latest consoles and computers." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://r2-image-proxy.frankfrankenstain.workers.dev/images/preview.png" />
   <meta property="og:url" content="https://gnt-store.vercel.app" />
