Initial commit of GNT e-commerce frontend

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   <!-- Title & Description -->
   <title>GNT – Next-Gen Console & PC Marketplace</title>
-  <meta name="description" content="Explore the future of gaming tech with GNT – Your go-to marketplace for premium consoles and computers." />
+  <meta name="description" content="Explore the future of gaming tech with GNT – Your go-to marketplace for consoles and computers." />
   
   <!-- Open Graph (for social sharing) -->
   <meta property="og:title" content="GNT – Next-Gen Console & PC Marketplace" />
