Preventing Auto-Zoom and Orientation Issues on iOS

--- a/index.html
+++ b/index.html
@@ -3,28 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <!-- Added iOS specific meta tags -->
-  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <!-- Updated to current standards -->
+  <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta http-equiv="ScreenOrientation" content="autoRotate:disabled" />
-  
   <!-- Title & Description -->
   <title>GNT – Next-Gen Console & PC Marketplace</title>
   <meta name="description" content="Explore the future of gaming tech with GNT – Your go-to marketplace for consoles and computers." />
-  
   <!-- Open Graph (for social sharing) -->
   <meta property="og:title" content="GNT – Next-Gen Console & PC Marketplace" />
   <meta property="og:description" content="Explore the future of gaming tech with GNT – Your go-to marketplace for latest consoles and computers." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://r2-image-proxy.frankfrankenstain.workers.dev/images/preview.png" />
   <meta property="og:url" content="https://gnt-store.vercel.app" />
-  
   <!-- Stylesheets -->
   <link rel="stylesheet" href="/src/index.css" />
-  
   <!-- Resource preloading -->
   <link rel="preload" href="./logo.svg" as="image" />
-  
   <!-- Favicon configurations -->
   <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
@@ -32,7 +27,6 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-title" content="MyWebSite" />
   <link rel="manifest" href="/favicon/site.webmanifest" />
-  
   <style>
     /* Added iOS text size adjustment to prevent auto-zoom */
     html {
