--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
   <!-- Resource preloading -->
   <link rel="preload" href="./logo.svg" as="image" />
   <!-- Favicon configurations -->
-  <link rel="icon" type="image/png" href="public//favicon/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/svg+xml" href="public//favicon/favicon.svg" />
+  <link rel="icon" type="image/png" href="public/favicon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="public/favicon/favicon.svg" />
   <link rel="shortcut icon" href="public/favicon/favicon.ico" />
   <link rel="apple-touch-icon" sizes="180x180" href="public/favicon/apple-touch-icon.png" />
-  <meta name="apple-mobile-web-app-title" content="MyWebSite" />
+  <meta name="apple-mobile-web-app-title" content="GNT" />
   <link rel="manifest" href="public/favicon/site.webmanifest" />
   <style>
     /* Added iOS text size adjustment to prevent auto-zoom */
