--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link rel="shortcut icon" href="/favicon/favicon.ico" />
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-title" content="GNT" />
-  <link rel="manifest" href="/favicon/site.webmanifest" />
+  <link rel="manifest" href="/site.webmanifest" />
   <style>
     /* Added iOS text size adjustment to prevent auto-zoom */
     html {
