--- a/index.html
+++ b/index.html
@@ -59,6 +59,18 @@
     .loading-dots { display: flex; gap: 0.5rem; }
     .logo { width: 20rem; height: auto; margin-bottom: 1rem; }
   </style>
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-08X41YDNDC">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-08X41YDNDC');
+</script>
+
 </head>
 <body>
   <div id="initial-loading">
